--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- header  ends here -->
         <main>
           <!-- carousel starts from here -->
-            <div id="carousel">
+            <div class="carousel">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -55,8 +55,27 @@
                   </div>
                   <!-- carousel ends here -->
             </div>
+            <div class="cards">
+              <div class="card">
+                <img src="media/products/s24.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Samsung S24</h5>
+                  <p class="card-text">Rs.40000</p>
+                  <a href="#" class="btn btn-primary">More details </a>
+                </div>
+              </div>
+              <div class="card">
+                <img src="media/products/s24.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Samsung S24</h5>
+                  <p class="card-text">Rs.40000</p>
+                  <a href="#" class="btn btn-primary">More details </a>
+                </div>
+              </div>
+            </div>
+            
             <!-- code for cards starts from here -->
-            <section id="products">
+            <!-- <section id="products">
               <div class="cards">
                 <div class="card-img">
                   <img src="media/products/s24.jpg" alt="">
@@ -75,7 +94,7 @@
                   </div>
                 </div>
               </div>
-            </section>
+            </section> -->
             <!-- card ends here -->
         </main>
     </div>
