--- a/index.html
+++ b/index.html
@@ -64,6 +64,48 @@
                   <a href="#" class="btn btn-primary">More details </a>
                 </div>
               </div>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <img src="media/products/s24.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Samsung S24</h5>
+                  <p class="card-text">Rs.40000</p>
+                  <a href="#" class="btn btn-primary">More details </a>
+                </div>
+              </div>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <img src="media/products/s24.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Samsung S24</h5>
+                  <p class="card-text">Rs.40000</p>
+                  <a href="#" class="btn btn-primary">More details </a>
+                </div>
+              </div>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <img src="media/products/s24.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Samsung S24</h5>
+                  <p class="card-text">Rs.40000</p>
+                  <a href="#" class="btn btn-primary">More details </a>
+                </div>
+              </div>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <img src="media/products/s24.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Samsung S24</h5>
+                  <p class="card-text">Rs.40000</p>
+                  <a href="#" class="btn btn-primary">More details </a>
+                </div>
+              </div>
+            </div>
+            <div class="cards">
               <div class="card">
                 <img src="media/products/s24.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
