--- a/login.html
+++ b/login.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    
+    <section id="login">
+        <div>
+            <form action="" method="post" class="login-form">
+                <header>
+                    <h1>Login</h1>
+                </header>
+                <div>
+                    <label for="username-input" class="hide">Username:</label>
+                    <input type="text" name="" placeholder="Enter your username" id="username-input" required>
+                </div>
+                <div>
+                    <label for="pwd-input" class="hide">Password:</label>
+                    <input type="password" id="pwd-input" placeholder="Enter your password" required>
+                </div>
+
+                <a href="index.html"><button type="submit">Login</button></a>
+
+            </form>
+
+        </div>
+    </section>
 </body>
 </html>
