--- a/login.html
+++ b/login.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="shortcut icon" href="static/images/icons/phonify.ico" type="image/x-icon">
 </head>
 <body>
+    
+    <div class="container">
+        <!-- haeader starts from here -->
+        <header id="site-header">
+            <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+                <div class="container-fluid">
+                  <a class="navbar-brand">Phonify</a>
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html"><img src="static/images/icons/home.svg" alt=""></a>
+                    </li>
+                    </ul>
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <a href="search.html"><button class="btn btn-outline-success" type="submit"><img src="static/images/icons/search.svg" alt=""></button></a>
+                  </form>
+                </div>
+              </nav>
+        </header>
+        <!-- header  ends here -->
     <section id="login">
         <div>
             <form action="" method="post" class="login-form">
@@ -27,6 +49,8 @@
             </form>
 
         </div>
+    </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
