--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header id="site-header">
             <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand">Phonify</a>
+                  <a href="index.html"><a class="navbar-brand">Phonify</a></a>
                   <ul class="navbar-nav">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="login.html">Login</a>
@@ -57,7 +57,7 @@
             <!-- cards starts from here -->
             <div class="cards">
               <div class="card">
-                <a href=""><img src="media/products/samsung/s24.jpg" class="card-img-top" alt="..."></a>
+                <a href="s24details.html"><img src="media/products/samsung/s24.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <h5 class="card-title">Samsung S24</h5>
                   <p class="card-text">Rs.40000</p>
@@ -89,18 +89,33 @@
             </div>
             <!-- cards ends here -->
              <hr>
+             <h3>Latest Updates </h3>
              <!-- cards for latest news starts here -->
              <section id="latest-news">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
+                    <a href="latestnews.html  "><img src="media/products/1qoo-z10.jpg" class="img-fluid rounded-start" alt="..."></a>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <a href=""><p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p></a>
+                      <a href="latestnews.html"><h5 class="card-title">iQOO Z10 family is on the waywith four members</h5></a>
+                      <a href="latestnews.html"><p class="card-text">The focus will be on huge batteries for each one of them.</p></a>
                       <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <a href="s25news.html"><img src="media/products/s25news.jpg" class="img-fluid rounded-start" alt="..."></a>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <a href="s25news.html"><h5 class="card-title">Samsung Galaxy S25 comes with satellite messaging but not everyone can use it</h5></a>
+                      <a href="s25news.html"><p class="card-text">The limitation is on the carrier level; each telecom must secure a deal with a satellite provider.</p></a>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 5mins ago</small></p>
                     </div>
                   </div>
                 </div>
@@ -108,6 +123,26 @@
              </section>
         </main>
     </div>
+    <hr>
+    <footer class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="foot-head">
+                  <h5>Phonify</h5>
+              </div>
+             
+              <div class="foot-icon">
+                  <h5>Connect Us</h5>
+                  <div class="social-icons">
+                      <a href=""><img src="static/images/icons/facebook.svg" alt=""></a>
+                      <a href="#"><img src="static/images/icons/instagram.svg" alt=""></a>
+                      <a href="#"><img src="static/images/icons/whatsapp.svg" alt=""></a>
+                      <a href="#"><img src="static/images/icons/twitter.svg" alt=""></a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
 </body>
 </html>
