--- a/latestnews.html
+++ b/latestnews.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="shortcut icon" href="static/images/icons/phonify.ico" type="image/x-icon">
@@ -15,7 +15,7 @@
         <header id="site-header">
             <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
                 <div class="container-fluid">
-                  <a href="index.html"><a class="navbar-brand">Phonify</a></a>
+                  <a class="navbar-brand">Phonify</a>
                   <ul class="navbar-nav">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="index.html"><img src="static/images/icons/home.svg" alt=""></a>
@@ -29,28 +29,31 @@
               </nav>
         </header>
         <!-- header  ends here -->
-    <section id="login">
-        <div>
-            <form action="" method="post" class="login-form">
-                <header>
-                    <h1>Login</h1>
-                </header>
+         <main>
+            <div class="details">
                 <div>
-                    <label for="username-input" class="hide">Username:</label>
-                    <input type="text" name="" placeholder="Enter your username" id="username-input" required>
+                    <p>
+                        iQOO's Z9 family has a lot of members, and now the brand is readying their successors. The iQOO Z10 line will, at least initially, comprise only four members, according to a new rumor out of China. Of course, it may expand at a later point beyond that.
+                        The first devices in this series are going to be the Z10, Z10x, Z10 Turbo, and Z10 Turbo Pro. <br>
+                        <br>
+                        Apparently the main idea behind this line is to give every single handset a "super large" battery, which makes us think of something in the neighborhood of 7,000 mAh.
+                    </p>
+                </div>
+                <hr>
+                <div>
+                    <img src="media/products/iqoo-z10-2.jpg" alt="">
                 </div>
                 <div>
-                    <label for="pwd-input" class="hide">Password:</label>
-                    <input type="password" id="pwd-input" placeholder="Enter your password" required>
+                    <hr>
+                    <p>
+                        The Z10 Turbo Pro is currently being tested with the upcoming Qualcomm Snapdragon 8s Elite SoC, the successor to the 8s Gen 3. It allegedly manages to score over 2,000,000 in the AnTuTu benchmark, and will have an intriguing "separate graphics chip" that unfortunately does not get detailed any further.
+                        <br>
+                        <br>
+                        Previous rumors claimed that the Z10 Turbo would arrive with a "1.5K" resolution OLED screen with a 144 Hz refresh rate, a 50 MP main camera, and a large battery with support for 80W or 90W wired charging.
+                    </p>
                 </div>
-
-                <a href="index.html"><button type="submit">Login</button></a>
-
-            </form>
-
-        </div>
-    </div>
-    </section>
+            </div>
+         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
