--- a/s24details.html
+++ b/s24details.html
@@ -6,31 +6,52 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="shortcut icon" href="static/images/icons/phonify.ico" type="image/x-icon">
 </head>
 <body>
-   <div class="s24-caro">
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="media/products/samsung/s24.jpg" class="d-block w-100" alt="...">
+    <div class="container">
+      
+        <!-- haeader starts from here -->
+        <header id="site-header">
+          <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+              <div class="container-fluid">
+                <a class="navbar-brand">Phonify</a>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="static/images/icons/home.svg" alt=""></a>
+                  </li>
+                  </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <a href="search.html"><button class="btn btn-outline-success" type="submit"><img src="static/images/icons/search.svg" alt=""></button></a>
+                </form>
+              </div>
+            </nav>
+      </header>
+      <!-- header  ends here -->
+       <main>
+        <div class="s24-dt">
+          <div>
+            <h3>
+              Samsung galaxy S24
+            </h3>
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+          <div>
+            <img src="media/products/samsung/s24-3.jpg" alt="">
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+          <div>
+            <h5>
+              - Released 2024, January 24 <br>
+              - 167g or 168g, 7.6mm thickness <br>
+              - Android 14, up to 7 major upgrades <br>       
+              - 128GB/256GB/512GB storage, no card slot
+            </h5>
           </div>
+          
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-   </div>
+       </main>
+    </div>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
